--- a/rrule-slides.html
+++ b/rrule-slides.html
@@ -2412,7 +2412,7 @@ In&nbsp;[6]:
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Significa que vamos a necesitar distingir los días de la semana, y luego cuando calculemos fechas, poder pedir ese día</p>
+<p>Significa que vamos a necesitar distinguir los días de la semana, y luego cuando calculemos fechas, poder pedir ese día</p>
 </div>
 </div>
 </div>
@@ -4947,7 +4947,7 @@ In&nbsp;[34]:
     <li>La documentación de dateutil es muy completa, pueden verla en: <a href='https://labix.org/python-dateutil#head-1f7c5d0c956a96f26aa1de60b861f4d58180c1dd'>https://labix.org/python-dateutil#head-1f7c5d0c956a96f26aa1de60b861f4d58180c1dd</a></li>
     <li>La especificacion de iCalendar: <a href='ftp://ftp.rfc-editor.org/in-notes/rfc2445.txt'>RFC-2445 (Internet Calendaring and Scheduling Core Object Specification (iCalendar)) ftp://ftp.rfc-editor.org/in-notes/rfc2445.txt</a> tambien es una lectura interesante si quieren saber mas sobre fechas recurrentes</li>
     <li>Estas filminas estan disponibles en <a href='http://gbourdin.github.io/charlas/rrule-slides.html'>http://gbourdin.github.io/charlas/rrule-slides.html</a>.</li>
-    <li>Siempre que quieran pueden pingearme por irc, o mandarme un mail o preguntarme en persona (en cuyo caso deberan traerme cafe) y puedo tratar de ayudarlos</li>
+    <li>Siempre que quieran pueden pingearme por irc, o mandarme un mail o preguntarme en persona (en cuyo caso deberan traerme café) y puedo tratar de ayudarlos</li>
 </ul>
 </p>
 </div>
