--- a/rrule-slides-lujan.html
+++ b/rrule-slides-lujan.html
@@ -3270,7 +3270,7 @@ In&nbsp;[13]:
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="rrule-type">rrule type<a class="anchor-link" href="#rrule-type">&#182;</a></h2>
+<h2 id="rrule-class">rrule class<a class="anchor-link" href="#rrule-class">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -3281,7 +3281,7 @@ In&nbsp;[13]:
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Es la base de la operación rrule. Acepta todas las keywords establecidas en el RFC como constructores (excepto <em>byday</em>, que se renombró a </em>byweekday). El prototipo del constructor es:
+<p>Es la definición del objeto que computa reglas recurrentes. Su constructor acepta todas las keywords establecidas en el RFC como parámetros (excepto <em>byday</em>, que se renombró a </em>byweekday). El prototipo del constructor es:
 <pre>rrule(freq)</pre>
 Donde freq es uno de los siguientes: YEARLY, MONTHLY, WEEKLY, DAILY, HOURLY, MINUTELY, o SECONDLY.</p>
 </div>
@@ -3304,7 +3304,7 @@ Donde freq es uno de los siguientes: YEARLY, MONTHLY, WEEKLY, DAILY, HOURLY, MIN
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="rrule-type-(constructores)">rrule type (constructores)<a class="anchor-link" href="#rrule-type-(constructores)">&#182;</a></h2>
+<h2 id="rrule-class-(par&#225;metros)">rrule class (par&#225;metros)<a class="anchor-link" href="#rrule-class-(par&#225;metros)">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -3315,7 +3315,7 @@ Donde freq es uno de los siguientes: YEARLY, MONTHLY, WEEKLY, DAILY, HOURLY, MIN
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>rrule tambien acepta los siguientes constructores:</p>
+<p>rrule tambien acepta los siguientes parámetros:</p>
 </div>
 </div>
 </div>
@@ -3402,7 +3402,7 @@ Donde freq es uno de los siguientes: YEARLY, MONTHLY, WEEKLY, DAILY, HOURLY, MIN
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="rrule-type-(constructores)">rrule type (constructores)<a class="anchor-link" href="#rrule-type-(constructores)">&#182;</a></h2>
+<h2 id="rrule-class-(par&#225;metros)">rrule class (par&#225;metros)<a class="anchor-link" href="#rrule-class-(par&#225;metros)">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -3469,7 +3469,7 @@ Nos dara el último día habil de cada uno de los proximos 12 meses.</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="rrule-type-(constructores)">rrule type (constructores)<a class="anchor-link" href="#rrule-type-(constructores)">&#182;</a></h2>
+<h2 id="rrule-class-(par&#225;metros)">rrule class (par&#225;metros)<a class="anchor-link" href="#rrule-class-(par&#225;metros)">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -4080,7 +4080,7 @@ In&nbsp;[21]:
 
 
 <div class="output_text output_subarea output_pyout">
-<pre>&lt;dateutil.rrule.rrule at 0xa4071ac&gt;</pre>
+<pre>&lt;dateutil.rrule.rrule at 0x98891ac&gt;</pre>
 </div>
 
 </div>
