--- a/rrule-slides-pycon.html
+++ b/rrule-slides-pycon.html
@@ -1836,7 +1836,7 @@ div.output_prompt {
 </div>
 </div>
 </div>
-    </div><div class="fragment">
+    </div><div style=display:none>
     
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
@@ -1847,7 +1847,7 @@ div.output_prompt {
 </div>
 </div>
 </div>
-    </div><div class="fragment">
+    </div><div style=display:none>
     
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
