--- a/ml-notebook-to-prod/Machine Learning - Del Notebook a Produccion.slides.html
+++ b/ml-notebook-to-prod/Machine Learning - Del Notebook a Produccion.slides.html
@@ -13230,6 +13230,16 @@ a.anchor-link {
 <!-- Custom stylesheet, it must be in the same directory as the html file -->
 <link rel="stylesheet" href="custom.css">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129765773-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-129765773-1');
+</script>
+
 </head>
 
 
