--- a/index.html
+++ b/index.html
@@ -1,20 +1,67 @@
-<h1>Slides de charlas presentadas en eventos</h1>
+<!doctype html>
+<html class="no-js" lang="">
 
-<h2>2014</h2>
-<h3>PyDay Luján - 2014</h3>
-<ul>
-    <li><a href="http://gbourdin.github.io/charlas/rrule/rrule-slides-lujan.html">Evitando lesiones autoinfligidas usando rrule</a></li>
-</ul>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>German Bourdin - Conference talk slides</title>
+  <meta name="description" content="Filminas (slides) de charlas de gbourdin en eventos">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<h3>PyConAr 2014 (Rafaela)</h3>
-<ul>
-    <li><a href="http://gbourdin.github.io/charlas/rrule/rrule-slides-pycon.html">Evitando lesiones autoinfligidas usando rrule</a></li>
-</ul>
+  <link rel="manifest" href="site.webmanifest">
 
-<h2>2018</h2>
-<h3>PyConAr 2018 (CABA)</h3>
-<ul>
-    <li><a href="http://gbourdin.github.io/charlas/ml-notebook-to-prod/Machine Learning - Del Notebook a Produccion.slides.html">Machine Learning: Del Notebook a Produccion</a></li>
-</ul>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/custom.css">
 
-Germán Bourdin - 2018
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129765773-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-129765773-1');
+  </script>
+</head>
+
+<body>
+  <!--[if lte IE 9]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
+
+  <!-- Add your site or application content here -->
+  <div>
+    <span>
+    <h1>Slides de charlas presentadas en eventos</h1>
+
+    <h2>2014</h2>
+    <h3>PyDay Luján - 2014</h3>
+    <ul>
+        <li><a href="rrule/rrule-slides-lujan.html">Evitando lesiones autoinfligidas usando rrule</a></li>
+    </ul>
+
+    <h3>PyConAr 2014 (Rafaela)</h3>
+    <ul>
+        <li><a href="rrule/rrule-slides-pycon.html">Evitando lesiones autoinfligidas usando rrule</a></li>
+    </ul>
+
+    <h2>2018</h2>
+    <h3>PyConAr 2018 (CABA)</h3>
+    <ul>
+        <li><a href="ml-notebook-to-prod/Machine Learning - Del Notebook a Produccion.slides.html">Machine Learning: Del Notebook a Produccion</a></li>
+    </ul>
+
+    <p>Germán Bourdin - 2018</p>
+  </span>
+  </div>
+
+  <script src="js/vendor/modernizr-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
+
+</body>
+
+</html>
