--- a/rrule/rrule-slides-pycon.html
+++ b/rrule/rrule-slides-pycon.html
@@ -1712,6 +1712,16 @@ div.output_prompt {
 <!-- Custom stylesheet, it must be in the same directory as the html file -->
 <link rel="stylesheet" href="custom.css">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129765773-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-129765773-1');
+</script>
+
 </head>
 
 
