--- a/ml-notebook-to-prod/slides/Machine Learning - Del Notebook a Produccion.slides.html
+++ b/ml-notebook-to-prod/slides/Machine Learning - Del Notebook a Produccion.slides.html
@@ -9181,15 +9181,15 @@ label {
 }
 /* Flexible box model classes */
 /* Taken from Alex Russell http://infrequently.org/2009/08/css-3-progress/ */
-/* This file is a compatability layer.  It allows the usage of flexible box 
+/* This file is a compatability layer.  It allows the usage of flexible box
 model layouts accross multiple browsers, including older browsers.  The newest,
 universal implementation of the flexible box model is used when available (see
-`Modern browsers` comments below).  Browsers that are known to implement this 
+`Modern browsers` comments below).  Browsers that are known to implement this
 new spec completely include:
 
     Firefox 28.0+
     Chrome 29.0+
-    Internet Explorer 11+ 
+    Internet Explorer 11+
     Opera 17.0+
 
 Browsers not listed, including Safari, are supported via the styling under the
@@ -12571,7 +12571,7 @@ div#pager .ui-resizable-handle {
   background: #f7f7f7;
   border-top: 1px solid #cfcfcf;
   border-bottom: 1px solid #cfcfcf;
-  /* This injects handle bars (a short, wide = symbol) for 
+  /* This injects handle bars (a short, wide = symbol) for
         the resize handle. */
 }
 div#pager .ui-resizable-handle::after {
@@ -13070,7 +13070,7 @@ ul.typeahead-list  > li > a.pull-right {
 .highlight .il { color: #666666 } /* Literal.Number.Integer.Long */
     </style>
 <style type="text/css">
-    
+
 /* Temporary definitions which will become obsolete with Notebook release 5.0 */
 .ansi-black-fg { color: #3E424D; }
 .ansi-black-bg { background-color: #3E424D; }
@@ -13229,6 +13229,16 @@ a.anchor-link {
 
 <!-- Custom stylesheet, it must be in the same directory as the html file -->
 <link rel="stylesheet" href="custom.css">
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129765773-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-129765773-1');
+</script>
 
 </head>
 
@@ -13455,7 +13465,7 @@ a.anchor-link {
 <ul>
 <li>Es una herramienta de experimentación y exploración</li>
 <li>Es documentación</li>
-<li>A veces deja registro de varios experimentos y cosas que en el camino no andaron</li>
+<li>A veces deja registro de varios experimentos y cosas que en el camino no anduvieron</li>
 <li>En el mejor de los casos, hace una sola cosa</li>
 </ul>
 
@@ -13611,7 +13621,7 @@ Provee justo lo básico que esperamos de un "coso que predice", es suficientemen
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Va mas allá de lo que voy a llegar a hablar en esta charla, pero primero, 
+<p>Va mas allá de lo que voy a llegar a hablar en esta charla, pero primero,
 les permite ser los primeros usuarios de sus propios modelos.</p>
 <p>Segundo, hay muchas cosas para obligarse a pensar en este sentido.</p>
 
